clusters/my-cluster/apps/media/jellyfin/app/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin-ip
  namespace: media
subsets:
- addresses:
  - ip: 192.168.0.150
  ports:
  - name: jellyfin-app
    port: 80
    protocol: TCP
